WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267677
[WebGPU] Crash in Device::createShaderModule running shader,validation,* tests
https://bugs.webkit.org/show_bug.cgi?id=267677
Summary
[WebGPU] Crash in Device::createShaderModule running shader,validation,* tests
Mike Wyrzykowski
Reported
2024-01-17 23:12:03 PST
[WebGPU] Crash in Device::createShaderModule running shader,validation,* tests
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-17 23:12:20 PST
<
rdar://problem/121171008
>
Mike Wyrzykowski
Comment 2
2024-01-17 23:15:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22898
EWS
Comment 3
2024-01-19 11:07:37 PST
Committed
273229@main
(10afd1ef7aa2): <
https://commits.webkit.org/273229@main
> Reviewed commits have been landed. Closing PR #22898 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug