[WebGPU] Crash in Device::createShaderModule running shader,validation,* tests https://bugs.webkit.org/show_bug.cgi?id=267677 <radar://121171008>

Reviewed by Tadeu Zagallo.

Until https://bugs.webkit.org/show_bug.cgi?id=266774 is completed,
we have a range check that may return NSNotFound and not checking that
led to a crash in -[NSString substringWithRange:]

* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::Device::createShaderModule):

Canonical link: https://commits.webkit.org/273229@main